@@ -3,5 +3,5 @@ noinst_LTLIBRARIES = libjabberdlib.la
 include_HEADERS = jabberdlib.h
 
 libjabberdlib_la_SOURCES = base64.c karma.c sha.c xhash.c crc32.c jid.c pool.c snprintf.c xmlnode.c expat.c jpacket.c pproxy.c socket.c genhash.c jutil.c rate.c str.c xstream.c
-libjabberdlib_la_LIBADD = @LDFLAGS@
+libjabberdlib_la_LDFLAGS = @LDFLAGS@
 INCLUDES = -I..
